<resources>
    <string name="app_name">TimeLapseCam</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_unmute_all_streams">Reset Audio Volume</string>
    <string name="action_gallery_title">Open Gallery</string>
    <string name="action_gallery">Open Gallery</string>
    <string name="action_preview">Open Preview</string>
    <string name="button_start">Start Recording</string>
    <string name="button_stop">Stop Recording</string>
    <string name="button_unmute_all_streams">Reset Audio Volume</string>
    <string name="button_settings">Settings</string>
    <string name="button_gallery">Open Gallery</string>
    <string name="button_preview">Open Preview</string>
    <string name="info_recording_running">Recording is running</string>
    <string name="pref_mute_shutter">Mute Shutter Sound &amp; Ringtone</string>
    <string name="pref_mute_shutter_summ">Tries to mute the phone to prevent it from playing the shutter sound while taking a picture. Also tries to mute the ringtone of the phone. Need permission!</string>
    <string name="pref_camera">Select Camera</string>
    <string name="pref_camera_camera">Camera</string>
    <string name="pref_camera_front">front</string>
    <string name="pref_camera_back">back</string>
    <string name="pref_rec_mode">Recording Mode</string>
    <string name="pref_project_title">Project Title</string>
    <string name="pref_project_title_summ">The project title is used as a directory and prefix for the created files</string>
    <string name="pref_frame_rate">Playback Frame Rate</string>
    <string name="pref_frame_size">Frame Size</string>
    <string name="pref_capture_rate">Camera Capture Interval</string>
    <string name="pref_capture_rate_short">Interval</string>
    <string name="pref_capture_rate_summ">Select the capture interval</string>
    <string name="pref_initial_delay">Initial Delay</string>
    <string name="pref_initial_delay_summ">Select the delay before capturing starts</string>
    <string name="pref_jpeg_quality">JPEG Quality</string>
    <string name="pref_jpeg_quality_summ">Select the JPEG quality (this setting has no effect on some devices)</string>
    <string name="pref_stop_low_battery">Low Battery</string>
    <string name="pref_stop_low_battery_summ">Stop recording if the battery level gets low</string>
    <string name="pref_stop_low_storage">Low Storage Space</string>
    <string name="pref_stop_low_storage_summ">Stop recording if the storage space gets low</string>
    <string name="pref_schedule_recording">Schedule Recording</string>
    <string name="pref_stop_recording_after">Stop Recording After</string>
    <string name="pref_infinite">Infinite</string>
    <string name="pref_icon">Icon</string>
    <string name="pref_project_settings_category">Project settings</string>
    <string name="pref_camera_settings_category">Camera settings</string>
    <string name="pref_schedule_settings_category">Scheduling settings</string>
    <string name="pref_stop_settings_category">Stop settings</string>
    <string name="pref_notification_icon">Notification Icon</string>
    <string name="pref_notification_icon_summ">Select the notification icon shown while recording</string>
    <string name="format_fps">fps</string>
    <string name="time_format_msec">ms</string>
    <string name="time_format_sec">sec</string>
    <string name="time_format_secs">secs</string>
    <string name="time_format_min">min</string>
    <string name="time_format_mins">mins</string>
    <string name="time_format_hour">hour</string>
    <string name="time_format_hours">hours</string>
    <string name="pref_exposure_compensation">Exposure Compensation</string>
    <string name="notification_preparing">Preparing recording</string>
    <string name="error_missing_permission">Missing permission</string>
    <string name="error_already_running">Already running</string>
    <string name="pref_zoom">Zoom</string>
    <string name="dialog_OK_button">OK</string>
    <string name="dialog_CANCEL_button">Cancel</string>
    <string name="dialog_NO_button">No</string>
    <string name="dialog_Later_button">Maybe later</string>
    <string name="dialog_StarOnGitHub">Do you like this app? Please give a star on GitHub or buy the developer a coffee via PayPal.</string>
    <string name="pref_camera_hardware_settings">Hardware specific settings</string>
    <string name="pref_camera_init_delay_summ">Delay for camera startup. If too small crash can occur!</string>
    <string name="pref_camera_trigger_delay_summ">Delay before camera takes picture. If too low, image may be dark!</string>
    <string name="pref_camera_init_delay">Camera init delay</string>
    <string name="pref_camera_trigger_delay">Camera trigger delay</string>
    <string name="action_about">About</string>
    <string name="pref_flash">Use Flash if available</string>
    <string name="pref_video_enc_summ">Set 0 for maximum rate (default). The actual bitrate may be affected by the minimum quality required by the codec.</string>
    <string name="format_bps">%s bit/s</string>
    <string name="encode_best">Best quality</string>
    <string name="pref_video_enc_hint">Enter value in bit/s</string>
    <string name="pref_video_enc">Video Encoding Bit Rate</string>
    <string name="error_too_short">Video too short</string>
    <string name="pref_restapi_settings_category">REST API</string>
    <string name="pref_restapi_enabled">REST API enabled</string>
    <string name="pref_restapi_enabled_summ">Enable HTTP REST API server for remote control</string>
    <string name="pref_restapi_port_title">HTTP server port</string>
    <string name="pref_restapi_pw_title">Password</string>
    <string name="pref_restapi_port_hint">Port</string>
    <string name="pref_restapi_port_summ">Port, 1024 – 65535, default 8085. Restart of the REST API needed.</string>
    <string name="pref_restapi_pw_summ">Password to access the REST API</string>
    <string name="pref_restapi_pw_hint">Password</string>
    <string name="info_restapi_started">REST API started…</string>
    <string name="info_restapi_stopped">REST API stopped…</string>
    <string name="error_port_invalid">Port invalid, use 8085</string>
    <string name="pref_restapi_connectioninfo_title">Connection Info</string>
    <string name="pref_restapi_connectioninfo_title_on">REST API on</string>
    <string name="pref_restapi_connectioninfo_title_off">REST API off</string>
    <string name="error_no_ip_refresh">No IP! Tap to refresh.</string>
    <string name="notification_restapi">REST API Running</string>
    <string name="pref_restapi_settings_header">REST Settings</string>
    <string name="pref_stop_info_nostop">Never stop</string>
    <string name="pref_stop_info_stop_start">Stop:</string>
    <string name="pref_stop_info_stop_battery">low battery</string>
    <string name="pref_stop_info_stop_storage">low storage</string>
    <string name="pref_scheduling_settings_category">Scheduling</string>
    <string name="pref_scheduling_settings_title">Configure Scheduling</string>
    <string name="pref_preferences_title">Preferences</string>
    <string name="pref_scheduling_summ_start">Start-delay:</string>
    <string name="pref_scheduling_summ_duration">Duration:</string>
    <string name="pref_scheduling_summ_scheduling">Scheduled:</string>
    <string name="pref_state_title">State</string>
    <string name="pref_overview_category">Overview</string>
    <string name="pref_oled_screensaver_category">Show OLED Status Screen</string>
    <string name="title_activity_oled_screensaver">OLED Screensaver</string>
    <string name="show_oled_screensaver_summary">Show information at random location to prevent OLED burn in</string>
    <string name="pref_schedule_settings_category_calendar">Schedule start at date / time</string>
    <string name="pref_schedule_recording_enabled">Start recording at the configured date / time</string>
    <string name="pref_schedule_recording_enabled_title">Enable scheduled start</string>
    <string name="pref_schedule_recording_date">Date</string>
    <string name="pref_schedule_recording_time">Time</string>
    <string name="camera2_header">Preview</string>
    <string name="iso">ISO</string>
    <string name="iso_message">Select camera ISO</string>
    <string name="camera_value_auto">Auto</string>
    <string name="exposure_time">Exposure time</string>
    <string name="exposure_time_message">Select the exposure time</string>
    <string name="camera_menu_config">Camera Config</string>
    <string name="camera_menu_config_message">Additional Camera Configurations</string>
    <string name="cam_header_wb">White balance</string>
    <string name="pref_camera_settings_only_in_preview">The camera settings are configured in the preview. Here the settings are only displayed, and cannot be changed.</string>
    <string name="cam_wb_incandescent">Light bulb</string>
    <string name="cam_wb_daylight">Day Light</string>
    <string name="cam_wb_fluorescent">Fluorescent</string>
    <string name="cam_wb_cloud">Cloudy</string>
    <string name="autofocus">Autofocus</string>
    <string name="autofocus_message">Configure focus mode</string>
    <string name="cam_afmf_autofocus">Autofocus</string>
    <string name="cam_afmf_field">Autofocus at selected field</string>
    <string name="cam_header_flash">Flash</string>
    <string name="cam_header_flash_info">Flash Control just works in full auto mode</string>
    <string name="camera_flash_on">On</string>
    <string name="camera_flash_off">Off</string>
    <string name="dioptre">Dioptre</string>
    <string name="pref_camera_objective">Lens</string>
    <string name="pref_jpeg_settings">JPEG Settings</string>
    <string name="pref_image_rotation">Image Rotation</string>
    <string name="camera_not_selected">Start preview to configure camera</string>
    <string name="exposure_absolute">Absolute</string>
    <string name="exposure_relative">Relative</string>
    <string name="exposure_relative_text">Relative values are only applied if absolute value is set to \'Auto\'</string>
    <string name="logs">Logs</string>
    <string name="external_storage">External Storage setup</string>
    <string name="external_storage_info">To store images on an SD Card (if available) or any other Storage (e.g. USB Stick) you can select the location.</string>
    <string name="external_storage_bt_select">Select path</string>
    <string name="external_storage_path_header">Selected path</string>
    <string name="external_storage_enabled">Enable external storage</string>
    <string name="external_storage_info_disabled">External storage disabled</string>
    <string name="external_storage_info_enabled">External storage enabled</string>
    <string name="external_storage_info_not_possible_with_camera1">External storage only available in Extended Camera Interface mode</string>
    <string name="action_view_log_level">Displayed log level</string>
    <string name="action_log_to_file">Create Logfile</string>
    <string name="action_file_log_level">File Log Level</string>
    <string name="log_dialog_info">Set the log level filter for future log messages</string>
    <string name="log_file_dialog_enabled_info">Write Logfile to internal storage in the folder «{}»</string>
    <string name="write_log_file">Write Logfile</string>
    <string name="no_af_title">No Focus Control</string>
    <string name="no_af_description">This camera does not support autofocus / focus configuration.</string>
    <string name="cam_afmf_field_size_header">AF Field Size</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="px">px</string>
    <string name="action_focus">Focus</string>
    <string name="focus_information_header">Focus information</string>
</resources>