<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <PreferenceCategory android:title="@string/pref_project_settings_category" >
        <ListPreference
            android:defaultValue="VIDEO_TIME_LAPSE"
            android:dialogTitle="@string/pref_rec_mode"
            android:entries="@array/pref_rec_mode_entries"
            android:entryValues="@array/pref_rec_mode_values"
            android:key="pref_rec_mode"
            android:title="@string/pref_rec_mode" />

        <at.andreasrohner.spartantimelapserec.preference.NoKBEditTextPreference
            android:defaultValue="TimeLapse"
            android:inputType="textNoSuggestions"
            android:key="pref_project_title"
            android:summary="@string/pref_project_title_summ"
            android:title="@string/pref_project_title" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_camera_settings_category" >
        <ListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/pref_camera"
            android:key="pref_camera"
            android:title="@string/pref_camera" />

        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            android:defaultValue="0"
            android:key="pref_exposurecomp"
            android:title="@string/pref_exposure_compensation" />

        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            android:defaultValue="0"
            android:key="pref_zoom"
            android:title="@string/pref_zoom" />

        <ListPreference
            android:dialogTitle="@string/pref_frame_size"
            android:key="pref_frame_size"
            android:title="@string/pref_frame_size" />
        <ListPreference
            android:dialogTitle="@string/pref_frame_rate"
            android:key="pref_frame_rate"
            android:title="@string/pref_frame_rate" />

        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            app:log="1.2"
            app:stickyValue="250"
            app:suffix="ms"
            android:defaultValue="1000"
            android:dialogMessage="@string/pref_capture_rate_summ"
            android:key="pref_capture_rate"
            app:max="600000"
            android:title="@string/pref_capture_rate" />
        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            app:min="1"
            app:max="100"
            app:suffix="%"
            android:defaultValue="90"
            android:dialogMessage="@string/pref_jpeg_quality_summ"
            android:key="pref_jpeg_quality"
            android:title="@string/pref_jpeg_quality" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_mute_shutter"
            android:summary="@string/pref_mute_shutter_summ"
            android:title="@string/pref_mute_shutter" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_schedule_settings_category" >
        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            app:log="1.2"
            app:stickyValue="250"
            app:suffix="ms"
            android:defaultValue="1000"
            android:dialogMessage="@string/pref_initial_delay_summ"
            android:key="pref_initial_delay"
            app:max="300000"
            android:title="@string/pref_initial_delay" />
        <at.andreasrohner.spartantimelapserec.preference.SeekBarPreference
            app:log="1.2"
            app:stickyValue="60"
            app:suffix="min"
            android:defaultValue="2880"
            android:key="pref_stop_recording_after"
            app:max="28800"
            android:title="@string/pref_stop_recording_after" />

        <at.andreasrohner.spartantimelapserec.preference.DateTimePreference
            android:dialogMessage="@string/pref_schedule_recording"
            android:key="pref_schedule_recording"
            android:title="@string/pref_schedule_recording" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_stop_low_battery"
            android:summary="@string/pref_stop_low_battery_summ"
            android:title="@string/pref_stop_low_battery" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="pref_stop_low_storage"
            android:summary="@string/pref_stop_low_storage_summ"
            android:title="@string/pref_stop_low_storage" />
    </PreferenceCategory>

</PreferenceScreen>