<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/pref_project_settings_category">
        <ListPreference
            app:defaultValue="VIDEO_TIME_LAPSE"
            app:dialogTitle="@string/pref_rec_mode"
            app:entries="@array/pref_rec_mode_entries"
            app:entryValues="@array/pref_rec_mode_values"
            app:icon="@drawable/ic_mode"
            app:key="pref_rec_mode"
            app:title="@string/pref_rec_mode" />

        <EditTextPreference
            app:defaultValue="@string/app_name"
            app:icon="@drawable/ic_folder"
            app:key="pref_project_title"
            app:summary="@string/pref_project_title_summ"
            app:title="@string/pref_project_title" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_state_title">
        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_state"
            app:key="pref_main_menu_status_overview"
            app:summary="at.andreasrohner.spartantimelapserec.settings.StatusScreen"
            app:title="@string/pref_overview_category" />

        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_mobile"
            app:key="pref_main_menu_status_oled"
            app:summary="at.andreasrohner.spartantimelapserec.settings.OledScreensaverSettings"
            app:title="@string/pref_oled_screensaver_category" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/pref_preferences_title">
        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_gear"
            app:key="pref_main_menu_camera"
            app:summary="at.andreasrohner.spartantimelapserec.settings.LegacyCamera1Settings"
            app:title="@string/pref_camera_settings_category" />

        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_clock"
            app:key="pref_main_menu_scheduling"
            app:summary="at.andreasrohner.spartantimelapserec.settings.LegacyScheduling1Settings"
            app:title="@string/pref_scheduling_settings_title" />

        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_stop"
            app:key="pref_main_menu_stop"
            app:summary="at.andreasrohner.spartantimelapserec.settings.StopSettings"
            app:title="@string/pref_stop_recording_after" />

        <at.andreasrohner.spartantimelapserec.settings.ShowActivityPreference
            app:icon="@drawable/ic_web"
            app:key="pref_main_menu_restapi"
            app:summary="at.andreasrohner.spartantimelapserec.settings.RestSettings"
            app:title="@string/pref_restapi_connectioninfo_title" />
    </PreferenceCategory>
</PreferenceScreen>