<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/pref_schedule_settings_category">


        <at.andreasrohner.spartantimelapserec.preference.preftype.TimeSpanPreference
            android:defaultValue="1000"
            android:dialogMessage="@string/pref_initial_delay_summ"
            android:key="pref_initial_delay"
            android:title="@string/pref_initial_delay"
            app:icon="@drawable/ic_start"
            app:suffix="@string/time_format_msec" />

        <at.andreasrohner.spartantimelapserec.preference.preftype.TimeSpanPreference
            android:defaultValue="2880"
            android:dialogMessage="@string/pref_initial_delay_summ"
            android:key="pref_stop_recording_after"
            android:title="@string/pref_stop_recording_after"
            app:icon="@drawable/ic_end"
            app:suffix="@string/time_format_min" />

        <!--

 />

            app:log="1.2"
            app:max="2880"


        <at.andreasrohner.spartantimelapserec.preference.DateTimePreference
            android:dialogMessage="@string/pref_schedule_recording"
            android:key="pref_schedule_recording"
            android:title="@string/pref_schedule_recording" />

            -->

    </PreferenceCategory>
</PreferenceScreen>