<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="@string/pref_camera_settings_category">
        <ListPreference
            app:defaultValue="0"
            app:dialogTitle="@string/pref_camera"
            app:icon="@drawable/ic_switch_camera"
            app:key="pref_camera"
            app:title="@string/pref_camera" />

        <at.andreasrohner.spartantimelapserec.preference.preftype.TimeSpanPreference
            android:defaultValue="1000"
            android:dialogMessage="@string/pref_capture_rate_summ"
            android:key="pref_capture_rate"
            android:title="@string/pref_capture_rate"
            app:icon="@drawable/ic_timespan"
            app:timeSpanType="formatMs" />

    </PreferenceCategory>
</PreferenceScreen>