<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_info" />

    <Button
        android:id="@+id/btSetupExternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_bt_select" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:text="@string/external_storage_path_header"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textTargetUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <CheckBox
        android:id="@+id/enableExternalStorage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/external_storage_enabled" />
</LinearLayout>