<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <RadioGroup
        android:layout_width="match_parent"
        android:id="@+id/bt_afmf_group"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/bt_afmf_autofocus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cam_afmf_autofocus" />

        <RadioButton
            android:id="@+id/bt_afmf_af_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cam_afmf_field" />

        <TextView
            android:layout_width="match_parent"
            android:paddingTop="20dp"
            android:paddingLeft="20dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/cam_afmf_field_size_header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/width" />

            <EditText
                android:id="@+id/focus_point_width"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:text="@string/px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height" />

            <EditText
                android:id="@+id/focus_point_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/px" />
        </LinearLayout>

    </RadioGroup>
</LinearLayout>