<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp" >

    <Button
        android:id="@+id/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:drawableLeft="@drawable/ic_action_video"
        android:drawablePadding="-30dp"
        android:onClick="buttonStart"
        android:text="@string/button_start" />

    <Button
        android:id="@+id/button_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_start"
        android:drawableLeft="@drawable/ic_action_slideshow"
        android:drawablePadding="-30dp"
        android:onClick="buttonPreview"
        android:text="@string/button_preview" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_preview"
        android:drawableLeft="@drawable/ic_action_picture"
        android:drawablePadding="-30dp"
        android:onClick="buttonGallery"
        android:text="@string/button_gallery" />

    <Button
        android:id="@+id/button_unmute_all_streams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_gallery"
        android:drawableLeft="@drawable/ic_action_volume_on"
        android:drawablePadding="-30dp"
        android:onClick="buttonUnmuteAllStreams"
        android:text="@string/button_unmute_all_streams" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/button_unmute_all_streams"
        android:drawableLeft="@drawable/ic_action_settings"
        android:drawablePadding="-30dp"
        android:onClick="buttonSettings"
        android:text="@string/button_settings" />

</RelativeLayout>